--- a/app/src/main/res/drawable/constellation_virgo_label.xml
+++ b/app/src/main/res/drawable/constellation_virgo_label.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:radius="10dp"/>
-    <solid android:color="#ffffffff" />
+        android:radius="@dimen/constellation_corneers"/>
+    <solid android:color="@android:color/holo_green_dark" />
 </shape>
