--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="yeollow" >#ffe100</color>
+    <color name="deep_purple" >#8800ff</color>
+    <color name="white" >#ffffff</color>
+    <color name="female_color">#ff8080</color>
+    <color name="male_color">#57faff</color>
 </resources>
